avoiding jumping of the lower half of the content every time twitter has new content

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,4 +1,7 @@
 
+html,.container,.grid-container {
+    height: 100%;
+}
 body {
     margin-top: 24px;
     // background-image: url(../images/b.jpg);
@@ -7,6 +10,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #333;
+    position: relative;
 }
 
 *, *:before, *:after {
@@ -52,7 +56,9 @@ body {
     font-weight: 100;
     font-size: 170px;
 }
-
+.row {
+    height: 50%;
+}
 .tweet {
     position: relative;
     margin-bottom: 7px;
